src/components/Home/index.scss
.home-page{
    
    .text-zone{
        position: absolute;
        left:10%;
        top:50%;
        transform: translateY(-50%);
        width: 40%;
        max-height: 90%;
    }
    h1{
        color: #fff;
        font-size: 53px;
        font-family: 'Coolvetica';
        font-weight: 400;
      
      
        &::before{
            content: '<h1>';
            font-family: 'La Belle Aurore';
            color: #ffd700;
            font-size: 18px;
            position: absolute;
            margin-top: -40px;
            left: 15px;
            opacity: 0.6;

        }
        &::after{
            content: '</h1>';
            font-family: 'La Belle Aurore';
            color: #ffd700;
            font-size: 18px;
            position: absolute;
            margin-top: 18px;
            margin-left:20px;
            animation: fadeIn 1s 1.7s backwards;
            opacity: 0.6;
        }
        img{
            width: 50px;
            margin-left:10px;
            opacity: 0;
            height: auto;
            animation: rotateIn 1s linear both;
            animation-delay:1.4s ;
        }
    }
    h2{
        color: #8d8d8d;
        margin-top: 20px;
        font-weight: 400;
        font-size: 11px;
        font-family: sans-serif;
        letter-spacing: 3px;
        animation: fadeIn 1s backwards;

    }
    .flat-button{
        color: #ffd700;
        font-size:13px;
        font-weight: 400;
        text-decoration: none;
        letter-spacing: 4px;
        font-family: sans-serif;
        padding: 10px 18px;
        border: 1px solid #ffd700;
        margin-top: 25px;
        float: left;
        animation: fadeIn 1s 1.8s backwards;
        white-space: nowrap;
        &:hover{
            background-color: #ffd700;
            filter: drop-shadow(0 0 15px yellow);
            color: #333;
        }
    }
}
@media screen and (max-width: 600px) {
  
    .page{
        justify-content: center;
        align-items: center;
        overflow: hidden;
    }
    .reverse
    {
        display: flex;
        
        flex-direction: column-reverse;
    }
    .home-page{
        justify-content: center;
        align-items: center;
        // border: solid red 1px;
        height: 95vh;
        .text-zone{
            position: relative;
            left: 0%;
            top: 0;
            transform: none;
            width: 55%;
        }
        // border: solid green 1px;
        display: flex;
        flex-direction: column-reverse;
        justify-content: center;
        align-items: center;
        // flex-wrap: wrap;
        h1{
            // border: solid red 1px;
            font-size: 30px;
        }
        
    }
    

}

